// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getThemedColors() should return correct colors for theme: dark 1`] = `
{
  "activeColor": "rgba(126, 127, 130, 0.20)",
  "backgroundColor": "#0E0E12",
  "backgroundColorDarken": "#000000",
  "backgroundColorLighten": "#292934",
  "backgroundSurfaceColor": "#212225",
  "backgroundSurfaceColorDarken": "#040405",
  "backgroundSurfaceColorLighten": "#3E4045",
  "contrastHighColor": "#AFB0B3",
  "contrastHighColorDarken": "#909195",
  "contrastHighColorLighten": "#CECFD1",
  "contrastLowColor": "#404044",
  "contrastMediumColor": "#88898C",
  "disabledColor": "#7E7F82",
  "errorColor": "#FC4040",
  "errorColorDarken": "#FB0404",
  "errorSoftColor": "#3A0F0F",
  "errorSoftColorDarken": "#1A1111",
  "errorSoftColorLighten": "#3F2828",
  "focusColor": "#1A44EA",
  "hoverColor": "rgba(148, 149, 152, .18)",
  "hoverColorDarken": "#75767A",
  "infoColor": "#178BFF",
  "infoSoftColor": "#04294E",
  "infoSoftColorDarken": "#0C1A27",
  "infoSoftColorLighten": "#1A3856",
  "primaryColor": "#FBFCFF",
  "primaryColorDarken": "#BECEFF",
  "successColor": "#09D087",
  "successColorDarken": "#069561",
  "successSoftColor": "#003320",
  "successSoftColorDarken": "#04110C",
  "successSoftColorLighten": "#0F432F",
  "warningColor": "#F7CB47",
  "warningSoftColor": "#362B0A",
  "warningSoftColorDarken": "#16130B",
  "warningSoftColorLighten": "#3E3720",
}
`;

exports[`getThemedColors() should return correct colors for theme: light 1`] = `
{
  "activeColor": "rgba(148, 149, 152, 0.20)",
  "backgroundColor": "#FFF",
  "backgroundColorDarken": "#E0E0E0",
  "backgroundColorLighten": "#FFFFFF",
  "backgroundSurfaceColor": "#EEEFF2",
  "backgroundSurfaceColorDarken": "#CBCED7",
  "backgroundSurfaceColorLighten": "#FFFFFF",
  "contrastHighColor": "#535457",
  "contrastHighColorDarken": "#353638",
  "contrastHighColorLighten": "#717276",
  "contrastLowColor": "#D8D8DB",
  "contrastMediumColor": "#6B6D70",
  "disabledColor": "#949598",
  "errorColor": "#CC1922",
  "errorColorDarken": "#951219",
  "errorSoftColor": "#FFE2E4",
  "errorSoftColorDarken": "#F4CED1",
  "errorSoftColorLighten": "#FFFFFF",
  "focusColor": "#1A44EA",
  "hoverColor": "rgba(148, 149, 152, .18)",
  "hoverColorDarken": "#75767A",
  "infoColor": "#2762EC",
  "infoSoftColor": "#D3E1FF",
  "infoSoftColorDarken": "#C2D1F1",
  "infoSoftColorLighten": "#F4F7FD",
  "primaryColor": "#010205",
  "primaryColorDarken": "#000000",
  "successColor": "#197E10",
  "successColorDarken": "#0E4809",
  "successSoftColor": "#E4FFEC",
  "successSoftColorDarken": "#D0F4DB",
  "successSoftColorLighten": "#FFFFFF",
  "warningColor": "#F3BE00",
  "warningSoftColor": "#FFF4D2",
  "warningSoftColorDarken": "#F1E5C1",
  "warningSoftColorLighten": "#FCFAF3",
}
`;

exports[`getThemedColors() should return correct partial high contrast mode scheme colors for theme: dark 1`] = `
{
  "activeColor": "rgba(126, 127, 130, 0.20)",
  "backgroundColor": "#0E0E12",
  "backgroundColorDarken": "#000000",
  "backgroundColorLighten": "#292934",
  "backgroundSurfaceColor": "#212225",
  "backgroundSurfaceColorDarken": "#040405",
  "backgroundSurfaceColorLighten": "#3E4045",
  "contrastHighColor": "#AFB0B3",
  "contrastHighColorDarken": "#909195",
  "contrastHighColorLighten": "#CECFD1",
  "contrastLowColor": "#404044",
  "contrastMediumColor": "#7E7F82",
  "disabledColor": "GrayText",
  "errorColor": "#CB3333",
  "errorColorDarken": "#9A2727",
  "errorSoftColor": "#290A0A",
  "errorSoftColorDarken": "#0D0808",
  "errorSoftColorLighten": "#331F1F",
  "focusColor": "Highlight",
  "hoverColor": "rgba(148, 149, 152, .18)",
  "hoverColorDarken": "#75767A",
  "infoColor": "#027FFC",
  "infoSoftColor": "#001A33",
  "infoSoftColorDarken": "#040A11",
  "infoSoftColorLighten": "#0F2943",
  "primaryColor": "#FBFCFF",
  "primaryColorDarken": "#BECEFF",
  "successColor": "#00C77E",
  "successColorDarken": "#008A57",
  "successSoftColor": "#003320",
  "successSoftColorDarken": "#04110C",
  "successSoftColorLighten": "#0F432F",
  "warningColor": "#DDB84B",
  "warningSoftColor": "#2B2208",
  "warningSoftColorDarken": "#0D0C07",
  "warningSoftColorLighten": "#362F1C",
}
`;

exports[`getThemedColors() should return correct partial high contrast mode scheme colors for theme: light 1`] = `
{
  "activeColor": "rgba(148, 149, 152, 0.20)",
  "backgroundColor": "#FFF",
  "backgroundColorDarken": "#E0E0E0",
  "backgroundColorLighten": "#FFFFFF",
  "backgroundSurfaceColor": "#EEEFF2",
  "backgroundSurfaceColorDarken": "#CBCED7",
  "backgroundSurfaceColorLighten": "#FFFFFF",
  "contrastHighColor": "#535457",
  "contrastHighColorDarken": "#353638",
  "contrastHighColorLighten": "#717276",
  "contrastLowColor": "#D8D8DB",
  "contrastMediumColor": "#949598",
  "disabledColor": "GrayText",
  "errorColor": "#E7323B",
  "errorColorDarken": "#C51720",
  "errorSoftColor": "#FCE8E9",
  "errorSoftColorDarken": "#EED7D9",
  "errorSoftColorLighten": "#FFFFFF",
  "focusColor": "Highlight",
  "hoverColor": "rgba(148, 149, 152, .18)",
  "hoverColorDarken": "#75767A",
  "infoColor": "#1E5BEB",
  "infoSoftColor": "#E8EEFD",
  "infoSoftColorDarken": "#D6DEF0",
  "infoSoftColorLighten": "#FFFFFF",
  "primaryColor": "#010205",
  "primaryColorDarken": "#000000",
  "successColor": "#32B85B",
  "successColorDarken": "#258843",
  "successSoftColor": "#EBFAF0",
  "successSoftColorDarken": "#DDEAE1",
  "successSoftColorLighten": "#FFFFFF",
  "warningColor": "#FECC1B",
  "warningSoftColor": "#FFF9E6",
  "warningSoftColorDarken": "#F5ECD2",
  "warningSoftColorLighten": "#FFFFFF",
}
`;
